[package]
name = "alpaca-data-api"
version = "0.1.2"
authors = ["Ivan Acosta-Rubio <ivan@softwarecriollo.com>"]
edition = "2018"
description = "Interact with the Alpaca.market data API"
license = "MIT"

[[examples]]
name = "stock"

[dependencies]

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
dotenv= "0.15.0"
dotenv_codegen= { version = "0.15" }
